# astra-cuda

./: .gitignore  CLAUDE.md  QWEN_SETUP.md  README.md  experiments.md  legacy_wrapper.py  logs.txt  new_experiments.md  ops.ipynb  pyproject.toml  roadmap.md  setup-qwen-env.sh  setup-qwen-server.sh  usage.md
python/: analyze_nans.py  analyze_sampling.py  bandit.py  batch_playthrough.py  benchmark_attention_simple.py  benchmark_discrete_actor.py  benchmark_discrete_actor_detailed.py  benchmark_experimental_setup.py  benchmark_kv_cache.py  debug_actor_forward.py  debug_batch_size_anomaly.py  debug_parabolic_compilation.py  debug_parabolic_simple.py  exploiter_process.py  impala_cfg.py  impala_pinfo_training.py  logs.txt  main_process.py  normal.sh  normal.txt  normal_seedpool.txt  playthrough.py  playthrough_old.py  power_monitor.py  profile_cpu_bottlenecks.py  profile_vtrace_100iter.py  small.sh  small.txt  small_seedpool.txt  sync_active_runs.py  test_compilation.py  test_compilation_recursion.py  test_compilation_simple.py  test_compile_limitations.py  tournament_eval.py  trueskill_eg.py  vtrace.py  vtrace_baseline.py  vtrace_singleBaseline.py
python/algorithms/: impala.py  impala_config.py  impala_pinfo.py  ppo.py  ppo_config.py  vtrace.py  vtrace_config.py
python/archive/: actorDev_archive.py  actorDev_stale.py  agent_categorical.py  agent_sharetrunk.py  analyze_nans.py  bandit_dev.py  discrete_actor_noclass.py  discrete_actor_triangular.py  distribution_playthrough.py  experiments.md  gru_training_sample.py  high_low_info_roles.py  impala_adaptive_ent.py  impala_orig.py  main_process_old.py  profile_cpu_bottlenecks.py  profile_vtrace_0807.py  rnn_agent.py  transformer_training_sample.py  trueskill_eg.py  vtrace_old.py
python/archive/fast_scripts/: impala.py
python/archive/important_scripts/: discrete_actor.py  impala.py  vtrace.py
python/archive/working_scripts/: agent.py  impala.py
python/games/: high_low_clean.py  playthrough.txt
python/src/: arena.py  arena_new.py  bandit.py  benchmark_compile_modes.py  compile_incremental_forward.py  debug_optimized.py  discrete_actor.py  discrete_actor_parabolic.py  discrete_actor_working.py  model_components.py  plotting.py  plotting_refactored.py  sampler.py  test_incremental_compile.py  test_incremental_compile_fixed.py  test_optimized_transformer.py  timer.py  training.py  transformer_training.py  trueskill.py  verify_sampling_process.py
python/src/algorithms/: vtrace.py
python/src/high_low/: agent.py  config.py  config_old.py  env.py  impala.py  impala_lognans.py  logger.py  optimized_transformer_agent.py  plotting.py  rollouts.py  trainer.py  transformer_agent.py  vtrace.py
python/utils/: agent.py  arena.py  high_low.py  logger.py  logger_pinfo.py  plotting.py  timer.py
src/: CMakeLists.txt  debug_probe.cc  main.cc  probe.cc
src/core/: CMakeLists.txt  README.md  core.cc  core.h  vec_core.cc  vec_core.h
src/games/: CMakeLists.txt  registration.h
src/games/figgie/: figgie.cc  figgie.h
src/games/high_low_trading/: README.md  action_manager.cc  action_manager.h  high_low_trading.cc  high_low_trading.h  legacy_implementation.cc
src/order_matching/: CMakeLists.txt  README.md  market.cu  market.h
src/pybind/: CMakeLists.txt  bindings.cc  bindings.cu
src/pybind/core/: core_bindings.cc  core_bindings.h  game_parameter_bindings.h
src/pybind/order_matching/: market_bindings.cc  market_bindings.h
src/tests/: CMakeLists.txt  README.md  astra_utils_tests.cc  benchmark_market.cc  run_tests.sh
src/tests/benchmarks/: benchmark_env.cc  benchmark_market.cc  benchmark_market.py  benchmark_market_optimized.py  high_low_benchmark.py
src/tests/integration/: test_vec_market.py
src/tests/unit_tests/: CMakeLists.txt  market_tests.cu  market_tests_backup.cu
src/utils/: CMakeLists.txt  README.md  astra_utils.cc  astra_utils.h  game_parameters.cc  game_parameters.h  tensor_numpy_bridge.h
